# rustic_server

./: Cargo.toml
migrations/: 0001_create_tags.sql
migrations/2023-11-24-230417_create_tags_table/: up.sql
migrations/2023-11-24-230500_create_articles/: up.sql
migrations/2023-11-24-230510_create_question_group/: down.sql  up.sql
migrations/2023-11-24-230513_create_question/: up.sql
src/: main.rs  schema.rs
src/config/: app.rs  db.rs  error.rs  mod.rs
src/controller/: mod.rs  ques_group.rs  question.rs  tags.rs
src/model/: article.rs  mod.rs  ques_group.rs  question.rs  tag.rs
src/repo/: articles.rs  mod.rs  ques_group.rs  tags.rs
src/routes/: articles.rs  mod.rs  ques_group.rs  question.rs  tags.rs  tasks.rs
