[package]
name = "rustic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = "0.4"
log= "0.4.20"
serde = {version = "^1" , features = ["derive"]}
serde_json = "1.0.107"
serde_yaml = "0.9.25"
dotenvy = "0.15.6"
diesel = { version = "2.1.3", features = ["postgres", "chrono"] }